--- a/landscape/devl/hosts.map.erb
+++ b/landscape/devl/hosts.map.erb
@@ -6,13 +6,13 @@ wpassets <%= ENV['BACKEND_WP_CONTENT'] || "ist-wp-assets-#{ENV['LANDSCAPE']}.bu.
 
 wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-dbin <%= ENV['BACKEND_DBIN'] || "dbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+dbin <%= ENV['BACKEND_DBIN'] || "ist-web-dbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-phpbin <%= ENV['BACKEND_PHPBIN'] || "phpbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+phpbin <%= ENV['BACKEND_PHPBIN'] || "ist-web-phpbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "degree-advice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "ist-degreeadvice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-django <%= ENV['BACKEND_DJANGO'] || "django-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+django <%= ENV['BACKEND_DJANGO'] || "ist-web-django-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 uiscgi_app <%= ENV['BACKEND_UISCGI_APP'] || "ist-uiscgi-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
