Changed buawd backend
Changed buawd backend from ist-web-legacy-qa.bu.edu to ist-web-content-buwd.bu.edu

--- a/landscape/qa/hosts.map.erb
+++ b/landscape/qa/hosts.map.erb
@@ -32,6 +32,6 @@ buwd_uiscgi_app ist-uiscgi-app-buwd.bu.edu;
 buwd_uiscgi_content ist-uiscgi-content-buwd.bu.edu;
 
 # until the new content backends are in place 
-buwd_content ist-web-legacy-qa.bu.edu ;
+#buwd_content ist-web-legacy-qa.bu.edu ;
 # once the new content backends are in place
-#buwd_content ist-web-content-buwd.bu.edu ;
+buwd_content ist-web-content-buwd.bu.edu ;
