Experimental change to serve assets from S3.

--- a/landscape/devl/hosts.map.erb
+++ b/landscape/devl/hosts.map.erb
@@ -36,3 +36,4 @@ aws_home buaws-websites-homepage-devl.s3-website-us-east-1.amazonaws.com ;
 #
 aws_home_index buaws-websites-homepage-devl.s3-website-us-east-1.amazonaws.com/home/index.html ;
 
+bfenster_test bfenster-files.s3-us-west-2.amazonaws.com ;
