Map /phpbin/sciguide/ to new AWS backend.

--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -10,6 +10,8 @@ dbin ist-web-dbin-devl.bu.edu ;
 
 phpbin ist-web-phpbin-devl.bu.edu ;
 
+phpbin-aws www-syst.phpbin-apps.bu.edu ;
+
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "degree-advice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 django ist-web-django-devl.bu.edu ;
