--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -30,9 +30,13 @@ content-cache ist-w3-content-syst101.bu.edu ;
 # a subdirectory on the S3 bucket.
 #
 # This aws_homepage bucket is used for everything that maps normally:
-aws_home homepage-devl.s3-website-us-east-1.amazonaws.com ;
+# S3 home bucket in WebTeam account
+#aws_home homepage-devl.s3-website-us-east-1.amazonaws.com ;
+# S3 home bucket in web2cloud-nonprod account
+aws_home buaws-websites-homepage-devl.s3-website-us-east-1.amazonaws.com ;
 
 # These entries are necessary to map to specific URLs in the /home space:
 #
-aws_home_index homepage-devl.s3-website-us-east-1.amazonaws.com/home/index.html ;
+# No longer necessary
+#aws_home_index homepage-devl.s3-website-us-east-1.amazonaws.com/home/index.html ;
 
