update to new bucket location

--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -33,7 +33,7 @@ content-cache ist-w3-content-syst101.bu.edu ;
 # S3 home bucket in WebTeam account
 #aws_home homepage-devl.s3-website-us-east-1.amazonaws.com ;
 # S3 home bucket in web2cloud-nonprod account
-aws_home buaws-websites-homepage-devl.s3-website-us-east-1.amazonaws.com ;
+aws_home buaws-websites-homepage-test.s3.amazonaws.com ;
 
 # These entries are necessary to map to specific URLs in the /home space:
 #
