--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -35,8 +35,6 @@ content-cache ist-w3-content-syst101.bu.edu ;
 # S3 home bucket in web2cloud-nonprod account
 aws_home buaws-websites-homepage-test.s3.amazonaws.com ;
 
-# These entries are necessary to map to specific URLs in the /home space:
-#
-# No longer necessary
-#aws_home_index homepage-devl.s3-website-us-east-1.amazonaws.com/home/index.html ;
+# Needed to specifically handle index.html
+aws_home_index buaws-websites-homepage-test.s3.amazonaws.com/index.html ;
 
