--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -25,4 +25,4 @@ content-nocache ist-w3-content-syst101.bu.edu ;
 content-cache ist-w3-content-syst101.bu.edu ;
 
 # For the homepage specifically (not other S3 content):
-aws_home buaws-websites-homepage-test.s3.amazonaws.com ;
+aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
