Proof of concept for Elastic Beanstalk app replacing phpbin/lawyearbooks

--- a/landscape/devl/hosts.map.erb
+++ b/landscape/devl/hosts.map.erb
@@ -28,3 +28,6 @@ uiscgi_content <%= ENV['BACKEND_UISCGI_CONTENT'] || "ist-uiscgi-content-#{ENV['L
 # The following backend provides the homepage in S3.
 aws_home buaws-websites-homepage-devl.s3-website-us-east-1.amazonaws.com ;
 
+
+# Elastic Beanstalk for Web Applications:
+aws_eb_lawyearbooks lawyearbooks-env.gxbmuerrst.us-east-1.elasticbeanstalk.com ;
