--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -9,8 +9,7 @@ wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %
 dbin ist-web-dbin-devl.bu.edu ;
 
 phpbin ist-web-phpbin-devl.bu.edu ;
-
-phpbin-aws www-syst.phpbin-apps.bu.edu ;
+phpbin-aws ist-web-phpbin-aws-syst.bu.edu ;
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "degree-advice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
