Add a new content-restricted backend (ist-web-content-syst) and route /hello-restricted/ there.

--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -22,6 +22,7 @@ uiscgi_content <%= ENV['BACKEND_UISCGI_CONTENT'] || "ist-uiscgi-content-#{ENV['L
 content ist-w3-content-syst101.bu.edu ;
 content-nocache ist-w3-content-syst101.bu.edu ;
 content-cache ist-w3-content-syst101.bu.edu ;
+content-restricted ist-web-content-syst.bu.edu ;
 
 # For the homepage specifically (not other S3 content):
 aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
