Switch from bfenster-test-bucket to gmt-bucket for our proof of concept static sites S3.

--- a/landscape/devl/hosts.map.erb
+++ b/landscape/devl/hosts.map.erb
@@ -6,7 +6,7 @@ content-nocache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSC
 
 content-cache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-content-aws bfenster-test-bucket.s3-website-us-east-1.amazonaws.com ;
+content-aws gmt-bucket.s3-website-us-east-1.amazonaws.com ;
 
 content-restricted ist-web-content-syst.bu.edu ;
 
