--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -12,7 +12,7 @@ wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %
 
 dbin <%= ENV['BACKEND_DBIN'] || "ist-web-dbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-phpbin-aws www-test.phpbin-apps-nonprod.bu.edu ;
+phpbin-aws ist-web-phpbin-aws-test.bu.edu ;
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "ist-degreeadvice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
