--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -15,6 +15,8 @@ wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %
 dbin <%= ENV['BACKEND_DBIN'] || "ist-web-dbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 phpbin-aws ist-web-phpbin-aws-test.bu.edu ;
+phpbin ist-web-phpbin-test.bu.edu ;
+# Legacy phpbin is exclusively for serving BU Alert files out of AFS.
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "ist-degreeadvice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
