--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -4,7 +4,7 @@ content <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.b
 content-nocache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 content-cache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-content-aws static-sites-test-public.s3-website-us-east-1.amazonaws.com ;
+static-public static-sites-test-public.s3-website-us-east-1.amazonaws.com ;
 static-protected ist-web-static-sites-test.bu.edu ;
 
 
