Custom Domain POC test1 with fred.bu.edu

--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -26,3 +26,6 @@ content-restricted ist-web-content-syst.bu.edu ;
 
 # For the homepage specifically (not other S3 content):
 aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
+
+# custom domain project POC
+redirector domain-redirect-test.app-nprd.aws-cloud.bu.edu ;
