Disable WordPress on SYST by way of using non-existent hosts for app and assets

--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -2,9 +2,9 @@ legacy <%= ENV['BACKEND_WEB_LEGACY'] || "ist-web-legacy-#{ENV['LANDSCAPE']}.bu.e
 
 old_content <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-wpassets <%= ENV['BACKEND_WP_CONTENT'] || "ist-wp-assets-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+wpassets <%= ENV['BACKEND_WP_CONTENT'] || "DISABLED-ist-wp-assets-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+wordpress <%= ENV['BACKEND_WP_APP'] || "DISABLED-ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 dbin ist-web-dbin-devl.bu.edu ;
 
