--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -33,3 +33,6 @@ uiscgi_content <%= ENV['BACKEND_UISCGI_CONTENT'] || "ist-uiscgi-content-#{ENV['L
 #
 # This aws_homepage bucket is used for everything that maps normally:
 aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
+
+# Custom Domain Proxies:
+www-rewrite-wiki www-test.bu.edu/phpbin/wiki/
