Direct wiki-test.bu.edu traffic directly to phpbin ALB

--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -35,4 +35,4 @@ uiscgi_content <%= ENV['BACKEND_UISCGI_CONTENT'] || "ist-uiscgi-content-#{ENV['L
 aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
 
 # Custom Domain Proxies:
-www-rewrite-wiki www-test.bu.edu/phpbin/wiki/
+www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu/phpbin/wiki/
