Try routing wiki-test.bu.edu to phpbin server without path information

--- a/landscape/syst/hosts.map.erb
+++ b/landscape/syst/hosts.map.erb
@@ -30,4 +30,4 @@ aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
 # custom domain project POC
 redirector domain-redirect-test.app-nprd.aws-cloud.bu.edu ;
 
-www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu/phpbin/wiki ;
+www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu ;
