Correct destination of uisl1.bu.edu

--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -1,7 +1,7 @@
 legacy <%= ENV['BACKEND_WEB_LEGACY'] || "ist-web-legacy-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 # These backends are what "legacy" routed traffic to:
-uisl0 usl0.bu.edu:8082 ;
+usl1 usl1.bu.edu:8082 ;
 
 content <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 content-nocache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
