Setup custom S3 config for favoritepoem.org site

--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -15,6 +15,9 @@ content-cache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAP
 static-public static-sites-test-public.s3-website-us-east-1.amazonaws.com ;
 static-protected ist-web-static-sites-test.bu.edu ;
 
+static-favoritepoem static-sites-test-public.s3-website-us-east-1.amazonaws.com/_custom-domains/favoritepoem ;
+
+
 
 wpassets <%= ENV['BACKEND_WP_CONTENT'] || "ist-wp-assets-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
