Introduce bfenster-test site served from wpengine

--- a/landscape/test/hosts.map.erb
+++ b/landscape/test/hosts.map.erb
@@ -48,3 +48,6 @@ aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
 # Custom Domain Proxies:
 www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu/phpbin/wiki ;
 
+
+# Experimental additions for wpengine (bfenster 2022-05-03)
+wpengine-bfenster-test bu105671847766.wpengine.com ;
