Introduce new PHP-based search-test.bu.edu domain

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -7,6 +7,8 @@ mainframe-java-8082 usl1.bu.edu:8082 ;
 
 mainframe-pdf-converter uslpdfp.bu.edu:8080 ;
 
+search ist-web-phpbin-aws-test.bu.edu/phpbin/search ;
+
 
 content <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 content-nocache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
