--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -52,4 +52,4 @@ www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu/phpbin/wiki ;
 
 
 # Experimental additions for wpengine (bfenster 2022-05-03)
-wpengine-bfenster-test bu105671847767.wpengine.com ;
+wpengine-bubrainaging bubrainaging.wpengine.com ;
