--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -1,14 +1,8 @@
 legacy <%= ENV['BACKEND_WEB_LEGACY'] || "ist-web-legacy-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-old_content <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+wpassets ist-wp-app-sy01 ;
+wordpress ist-wp-app-sy01 ;
 
-wpassets <%= ENV['BACKEND_WP_CONTENT'] || "DISABLED-ist-wp-assets-#{ENV['LANDSCAPE']}.bu.edu" %> ;
-
-wordpress <%= ENV['BACKEND_WP_APP'] || "DISABLED-ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
-
-dbin ist-web-dbin-devl.bu.edu ;
-
-phpbin ist-web-phpbin-devl.bu.edu ;
 phpbin-aws ist-web-phpbin-aws-syst.bu.edu ;
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "degree-advice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
