Consolidate app and asset servers for WordPress

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -8,8 +8,8 @@ content-cache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAP
 static-public static-sites-syst-public.s3-website-us-east-1.amazonaws.com ;
 static-protected ist-web-static-sites-syst.bu.edu ;
 
-
-wpassets <%= ENV['BACKEND_WP_CONTENT'] || "ist-wp-assets-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+# Both wpassets and wordpress (app) are the same servers now.
+wpassets <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 wordpress-jaydub <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
