--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -10,6 +10,7 @@ mainframe-pdf-converter uslpdfp.bu.edu:8080 ;
 search ist-web-phpbin-aws-test.bu.edu/phpbin/search ;
 
 
+# Static Content Sites:
 content <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 content-nocache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 content-cache <%= ENV['BACKEND_WEB_CONTENT'] || "ist-web-content-#{ENV['LANDSCAPE']}.bu.edu" %> ;
@@ -20,9 +21,8 @@ static-protected ist-web-static-sites-test.bu.edu ;
 static-favoritepoem static-sites-test-public.s3-website-us-east-1.amazonaws.com/_custom-domains/favoritepoem ;
 
 
-
-wpassets <%= ENV['BACKEND_WP_CONTENT'] || "ist-wp-assets-#{ENV['LANDSCAPE']}.bu.edu" %> ;
-
+# Both wpassets and wordpress (app) are the same servers now.
+wpassets <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 dbin <%= ENV['BACKEND_DBIN'] || "ist-web-dbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
