Introduce temporary CentOS 7 host target and route bfenster.cms-devl.bu.edu there.

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -9,11 +9,10 @@ static-public static-sites-syst-public.s3-website-us-east-1.amazonaws.com ;
 static-protected ist-web-static-sites-syst.bu.edu ;
 
 # Both wpassets and wordpress (app) are the same servers now.
-wpassets <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 wordpress <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+wpassets <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
-wordpress-jaydub <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
-
+wordpress-centos7 ist-wp-app-dv01.bu.edu ;
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "ist-degreeadvice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
