--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -3,6 +3,7 @@ legacy <%= ENV['BACKEND_WEB_LEGACY'] || "ist-web-legacy-#{ENV['LANDSCAPE']}.bu.e
 # These backends are what "legacy" routed traffic to:
 mainframe-java-881 usl1.bu.edu:881/hod ;
 mainframe-java-8080 usl1.bu.edu:8080 ;
+mainframe-eos-access ist-eos-te01.bu.edu:8080 ;
 
 mainframe-pdf-converter uslpdfp.bu.edu:8080 ;
 
