--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -48,6 +48,9 @@ aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
 # Custom Domain Proxies:
 www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu/phpbin/wiki ;
 
+# wp-deploy
+wp-deploy ist-wp-bld-pr01.bu.edu:8000 ;
+
 
 # Experimental additions for wpengine (bfenster 2022-05-03)
 wpengine-bubrainaging bubrainaging.wpengine.com ;
