Route bfenster sandbox to PHP 7.4 environment.

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -12,6 +12,8 @@ static-protected ist-web-static-sites-syst.bu.edu ;
 wordpress ist-wp-app-dv01.bu.edu ;
 wpassets ist-wp-app-dv01.bu.edu ;
 
+wordpress-php74 ist-wp-app-dv02.bu.edu ;
+
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "ist-degreeadvice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
 django <%= ENV['BACKEND_DJANGO'] || "ist-web-django-#{ENV['LANDSCAPE']}.bu.edu" %> ;
