Third try: corrected domain for Docker-based wp-deploy

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -49,7 +49,7 @@ aws_home buaws-websites-homepage-test.s3-website-us-east-1.amazonaws.com ;
 www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu/phpbin/wiki ;
 
 # wp-deploy
-wp-deploy ist-wp-bld-pr01 ;
+wp-deploy ist-wp-bld-pr01.bu.edu ;
 
 
 # Experimental additions for wpengine (bfenster 2022-05-03)
