--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -24,3 +24,5 @@ uiscgi_content <%= ENV['BACKEND_UISCGI_CONTENT'] || "ist-uiscgi-content-#{ENV['L
 # ###
 # The following backend provides the homepage in S3.
 aws_home static-sites-syst-public.s3-website-us-east-1.amazonaws.com ;
+
+wp-deploy ist-wp-bld-pr01.bu.edu ;
