--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -22,7 +22,7 @@ static-favoritepoem static-sites-test-public.s3-website-us-east-1.amazonaws.com/
 
 
 # Both wpassets and wordpress (app) are the same servers now.
-wpassets <%= ENV['BACKEND_WP_APP'] || "ist-wp-app-#{ENV['LANDSCAPE']}.bu.edu" %> ;
+wpassets internal-wordpress-test-639194967.us-east-1.elb.amazonaws.com ;
 wordpress internal-wordpress-test-639194967.us-east-1.elb.amazonaws.com ;
 
 dbin <%= ENV['BACKEND_DBIN'] || "ist-web-dbin-#{ENV['LANDSCAPE']}.bu.edu" %> ;
