Introduce new AWS ALB and route bfenster sandbox to that ALB (pointed to dv01)

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -12,6 +12,8 @@ static-protected ist-web-static-sites-syst.bu.edu ;
 wordpress ist-wp-app-dv01.bu.edu ;
 
 wordpress-php74 ist-wp-app-dv02.bu.edu ;
+wordpress-aws-alb internal-wordpress-test-1577336240.us-east-1.elb.amazonaws.com ;
+
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "ist-degreeadvice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
