Introduce phpbin-aws routing

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -14,6 +14,7 @@ wordpress ist-wp-app-dv01.bu.edu ;
 wordpress-php74 ist-wp-app-dv02.bu.edu ;
 wordpress-aws-alb internal-wordpress-devl1-1876646584.us-east-1.elb.amazonaws.com ;
 
+phpbin-aws www-test.phpbin-apps-nonprod.bu.edu ;
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "ist-degreeadvice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
