Route phpbin-aws directly to AWS ALB (not through F5)

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -3,7 +3,7 @@ legacy <%= ENV['BACKEND_WEB_LEGACY'] || "ist-web-legacy-#{ENV['LANDSCAPE']}.bu.e
 wpassets ist-wp-app-sy01 ;
 wordpress ist-wp-app-sy01 ;
 
-phpbin-aws ist-web-phpbin-aws-syst.bu.edu ;
+phpbin-aws www-syst-alb.phpbin-apps-nonprod.bu.edu ;
 
 degree-advice <%= ENV['BACKEND_DEGREE_ADVICE'] || "degree-advice-#{ENV['LANDSCAPE']}.bu.edu" %> ;
 
