Try switching back to wpengine.com for our Questrom domain

--- a/maps/hosts.map.erb
+++ b/maps/hosts.map.erb
@@ -46,4 +46,4 @@ www-rewrite-wiki ist-web-phpbin-aws-test.bu.edu/phpbin/wiki ;
 
 # Experimental additions for wpengine (bfenster 2022-05-03)
 wpengine-bubrainaging bubrainaging.wpengine.com ;
-wpengine-questrom buquestrom.wpenginepowered.com ;
+wpengine-questrom buquestrom.wpengine.com ;
